# olcao

./: .gitignore  .olcao  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
distrib/: Makefile  config.h  config.status
src/: Makefile.am
src/olcao/: potentialUpdate.F90
src/polcao/: OLCAO_Main.f90  OLCAO_Setup.f90  bst23.f90  bstAtomPair.f90  compileSetup  dos.F90  elecStat.f90  exchCorr.f90  hdf5MainPOLCAO.F90  hdf5Setup.f90  hdf5SetupElec.f90  hdf5SetupIntg.F90  hdf5SetupPOLCAO.F90  hdf5polcao.F90  integralsSCF.F90  interfaces.F90  intgOrtho.F90  intgSaving.F90  matrixSubs.F90  parallel.f90  parallelSubs.F90  polcaoMain.F90  polcaoMain.f90  polcaoSetup.F90  polcaoSetup.f90  populate.F90  potential.f90  secularEqn.F90  slSubs.F90
src/polcao/test/: Untitled 1.ods  a.out  bstTest  bstTest.f90  compileCommand  gaBlockCyclic.F90  gridcalc.py  mostSquareGrid.py  nodeTest.F90  o_23bst.mod  o_kinds.mod  o_slsubs.mod  ptrTest.f90  ptrfuncs.mod  rectTest.py  simple.c  simple.f90  test.hdf5  writeTest  writeTest.F90
src/polcao/test/addAtomPairsTest/: atomAtomPairsTest.f90  compile
src/polcao/test/blacsTest/: blacsSetupTest  blacsSetupTest.f90  compile  o_kinds.mod  o_parallel.mod  test.sh
src/polcao/test/bstAtomTreeTest/: bstTest  bstTest.f90  compile  o_bstatompair.mod
src/polcao/test/hdf5polcaoTest/: compileCommand  hdf5polcaoTest.f90  polcaoDistribution.hdf5
src/polcao/test/mapingTest/: compile  maptest.f90  o_parallel.mod  proc0.out  proc1.out  test
src/scripts/: atomicSites.py  atomicTypes.py  olcaoDistribute.py  parDescs.py
